[project]
name = "mimo_audio"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "accelerate>=1.9.0",
    "fastapi>=0.116.1",
    "librosa>=0.11.0",
    "pydantic>=2.11.7",
    "scipy>=1.16.1",
    "torch==2.6.0+cu126",
    "torchaudio==2.6.0+cu126",
    "transformers==4.49.0",
    "triton==3.2.0",
    "uvicorn>=0.35.0",
    "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.2/flash_attn-2.8.2+cu12torch2.6cxx11abiTRUE-cp312-cp312-linux_x86_64.whl",
    "gradio",
    "zhon"
]


